--- a/pages/modules/full-page-sauna.html
+++ b/pages/modules/full-page-sauna.html
@@ -10,6 +10,7 @@
                dots="true"
                slides-to-show="1"
                infinite="true"
+               center-mode="true"
                speed="500">
             <div ng-repeat="image in sauna_choose.images">
                 <img src="{{ image }}">
