--- a/pages/modules/full-page-sauna.html
+++ b/pages/modules/full-page-sauna.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="last-text">
-            Дополнительно оплачивается: 1) *Караоке. 2) **За каждого дополнительного гостя в номерах взимается плата в размере 100 руб. с человека в час.
+            Дополнительно оплачивается: 1) *Караоке. 2) **За каждого дополнительного гостя в номерах взимается плата в размере {{ sauna_choose.guest_overprice }} руб. с человека в час.
         </div>
     </div>
 </div>
